feat: add booking state machine
